RESOLVED FIXED82141
Fix minor spell error in DocumentLoader.h
https://bugs.webkit.org/show_bug.cgi?id=82141
Summary Fix minor spell error in DocumentLoader.h
Charles Wei
Reported 2012-03-25 03:30:30 PDT
clientedirectSourceForHistory should be clientRedirectSourceForHistory.
Attachments
patch (2.29 KB, patch)
2012-03-25 03:36 PDT, Charles Wei
no flags
Patch V2 -- Fix the style check error because of no new test. (2.31 KB, patch)
2012-03-25 17:31 PDT, Charles Wei
no flags
Charles Wei
Comment 1 2012-03-25 03:36:52 PDT
Created attachment 133675 [details] patch Simple patch to fix the spell error.
Charles Wei
Comment 2 2012-03-25 03:38:10 PDT
Comment on attachment 133675 [details] patch Remove cq+ which was applied by accident. Need an reviewer to approve first before cq+.
WebKit Review Bot
Comment 3 2012-03-25 03:39:59 PDT
Attachment 133675 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Charles Wei
Comment 4 2012-03-25 17:31:38 PDT
Created attachment 133703 [details] Patch V2 -- Fix the style check error because of no new test.
WebKit Review Bot
Comment 5 2012-03-26 19:17:40 PDT
Comment on attachment 133703 [details] Patch V2 -- Fix the style check error because of no new test. Clearing flags on attachment: 133703 Committed r112194: <http://trac.webkit.org/changeset/112194>
WebKit Review Bot
Comment 6 2012-03-26 19:17:45 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.