Fix minor spell error in DocumentLoader.h https://bugs.webkit.org/show_bug.cgi?id=82141

Reviewed by Nate Chapin.

Just fix spell error, no new tests.

* loader/DocumentLoader.h:
(WebCore::DocumentLoader::setClientRedirectSourceForHistory):


Canonical link: https://commits.webkit.org/99631@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112194 268f45cc-cd09-0410-ab3c-d52691b4dbfc